<resources>
    <string name="app_name">AppListaVip</string>
    <string name="nome_app">App Lista Vip Curso Android</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="nome_do_curso_desejado">Nome do Curso Desejado</string>
    <string name="telefone_para_contato">Telefone para Contato</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>
    <string name="finalizar">Finalizar</string>
    <string name="selecione_curso">Selecione o Curso Desejado</string>
</resources>