<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".View.MainActivity">

    <TextView
        android:id="@+id/tvApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary_dark"
        android:gravity="center_horizontal"
        android:text="@string/nome_app"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPrimeiroNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/primeiro_nome"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/sobrenome"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/telefone_para_contato"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="16sp"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tvListaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:gravity="center_horizontal"
        android:text="@string/selecione_curso"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:minHeight="48dp"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/limpar"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/salvar"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/finalizar"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="VisualLintButtonSize" />

</androidx.appcompat.widget.LinearLayoutCompat>